--- a/todo/templates/todo/loginUser.html
+++ b/todo/templates/todo/loginUser.html
@@ -45,7 +45,7 @@
     </form>
     <hr />
     <div class="text-center">
-      Need an account? <a href="{% url 'signupUser' %}">Sign Up here</a>
+      <a href="{% url 'signupUser' %}">Need an account? Sign Up here</a>
     </div>
   </div>
 </div>
