--- a/todo/templates/todo/currentTodos.html
+++ b/todo/templates/todo/currentTodos.html
@@ -3,20 +3,25 @@
   <div class="col-md-10">
     {% if todos %}
     <h1>{{ todos.count }} - Current Todo{{ todos.count|pluralize }}</h1>
+    <p>(Click to each To-Do to EDIT)</p>
     {% else %}
     <h1>Current Todos</h1>
     {% endif %}
   </div>
 </div>
-<div class="row justify-content-center mt-5 container">
+<div class="row justify-content-center container">
   <div class="col-md-10">
-  <br />
+    <br />
     {% if todos %}
     <div class="list-group">
       {% for todo in todos %}
       <a
         href="{% url 'viewTodo' todo.id %}"
-        class="list-group-item list-group-item-action{% if todo.important %} list-group-item-success{% endif %}" style="margin-top: 10px;"><b>{{ todo.title }}</b>{% if todo.memo %} - {{todo.memo|truncatechars:30 }}{% endif %}</a>
+        class="list-group-item list-group-item-action{% if todo.important %} list-group-item-success{% endif %}"
+        style="margin-top: 10px"
+        ><b>{{ todo.title }}</b>{% if todo.memo %} -
+        {{todo.memo|truncatechars:30 }}{% endif %}</a
+      >
       {% endfor %}
     </div>
     {% else %}
