--- a/todo/templates/todo/signupUser.html
+++ b/todo/templates/todo/signupUser.html
@@ -78,8 +78,9 @@
     </form>
     <hr />
     <div class="text-center">
-      Do you already have an account?
-      <a href="{% url 'loginUser' %}">Login here</a>
+      <a href="{% url 'loginUser' %}"
+        >Do you already have an account? Login here</a
+      >
     </div>
   </div>
 </div>
